plugins {
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.0.7'
}

//untere Zeile zusätzlich zum JFX Plugin bei der Run... config unter JVM hinzufügen (Pfad ändern)
//javafx library muss heruntergeladen sein und im Projekt importiert
//--module-path /home/cedric/java_lib/javafx-sdk-11.0.2/lib --add-modules=javafx.controls,javafx.fxml

group 'de.uni_hannover.hci.cardgame'
version '1.0-SNAPSHOT'

sourceCompatibility = 12

repositories {
    mavenCentral()
}

sourceSets {
    main{
        resources{
            srcDirs = ["src/main/resources"]
            includes = ["**/*.fxml", "**/*.css", "**/*.png"]
        }

        java { srcDir 'src' }
    }
}

dependencies {
    implementation 'com.google.code.gson:gson:2.8.5'
    implementation 'org.openjfx:javafx-base:12.0.1'
    implementation 'org.openjfx:javafx-controls:12.0.1'
    implementation 'org.openjfx:javafx-fxml:12.0.1'




}


javafx {
    version = '12'
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

// build the client JAR
task clientJar(type: Jar) {

    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }

    archiveFileName = 'Client.jar'

    from(sourceSets.main.output) {
        include "client/**"
        include "util/**"
    }

    manifest {
        attributes 'Main-Class': 'client.StartClient'
    }

    dependencies {
        compile 'com.google.code.gson:gson:2.8.5'
        /*
        compile 'org.openjfx.javafx-base:12.0.1'
        compile 'org.openjfx.javafx-controls:12.0.1'
        compile 'org.openjfx.javafx-fxml:12.0.1'
    */
    

    }



}

// build the server JAR
task serverJar(type: Jar) {

    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    
    archiveFileName = 'Server.jar'

    from(sourceSets.main.output) {
        include "server/**"
        include "util/**"
    }

    manifest {
        attributes 'Main-Class': 'server.StartServer'
    }

    dependencies {
        compile 'com.google.code.gson:gson:2.8.5'
    }
}

// build the server JAR
task launcherJar(type: Jar) {

    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }

    archiveFileName = 'Launcher.jar'

    from(sourceSets.main.output) {
        include "launcher/**"
    }

    manifest {
        attributes 'Main-Class': 'launcher.Launcher'
    }
}
